just add some index stuff

--- a/index.html
+++ b/index.html
@@ -1,2 +1,18 @@
-<div>list of layouts here</div>
-<div>responsive site here</div>
+<!doctype html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Layout Collection</title>
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="author" href="humans.txt">
+    </head>
+    <body>
+        <div class="grid-container">
+          <div class="grid-item"></div>
+          <div class="grid-item"></div>
+        </div>
+        <script src="js/main.js"></script>
+    </body>
+</html>
