--- a/index.html
+++ b/index.html
@@ -1,56 +1,94 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Web Component Library</title>
-        <link rel="stylesheet" href="css/tabs.css">
-        <link rel="author" href="humans.txt">
-    </head>
-    <body>
-        <h1>Web Component Library</h1>
+  <head>
+    <meta charset="utf-8">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Web Component Library</title>
+    <link rel="stylesheet" href="css/tabs.css">
+    <link rel="author" href="humans.txt">
+  </head>
+  <body>
+    <h1>Web Component Library</h1>
 
-        <article>
-            <h2>Tabs</h2>
-            <h3>Component Structure</h3>
-            <pre>
-                <code>
-                    Component structure:
-                    .tab__container
-                        .tab__list
-                            .tab__link
-                            .tab__link
-                            .tab__link
-                        .tab__content
-                        .tab__content
-                        .tab__content
-                </code>
-            </pre>
-            <h3>Demo</h3>
-            <div class="tab__container">
-                <div class="tab__list">
-                  <button class="tab__link" onclick="openCity(event, 'London')">London</button>
-                  <button class="tab__link" onclick="openCity(event, 'Paris')">Paris</button>
-                  <button class="tab__link" onclick="openCity(event, 'Tokyo')">Tokyo</button>
-                </div>
-
-                <div id="London" class="tab__content">
-                  <h3>London</h3>
-                  <p>London is the capital city of England.</p>
-                </div>
-
-                <div id="Paris" class="tab__content">
-                  <h3>Paris</h3>
-                  <p>Paris is the capital of France.</p> 
-                </div>
-
-                <div id="Tokyo" class="tab__content">
-                  <h3>Tokyo</h3>
-                  <p>Tokyo is the capital of Japan.</p>
-                </div>
-            </div>
-        </article>
-        <script src="js/tabs.js"></script>
-    </body>
+    <article>
+      <h2>Tabs</h2>
+      <h3>Component Structure</h3>
+      <pre>
+        <code>
+          Component structure:
+          .tab__container
+            .tab__list
+              .tab__link
+              .tab__link
+              .tab__link
+            .tab__content
+            .tab__content
+            .tab__content
+        </code>
+      </pre>
+      <h3>Demo</h3>
+      <div class="tab_container">
+        <ul>
+          <li class="tab active"><a href="#" data-tab="#tab-1">Tab 1</a></li>
+          <li class="tab"><a href="#" data-tab="#tab-2">Tab 2</a></li>
+          <li class="tab"><a href="#" data-tab="#tab-3">Tab 3</a></li>
+        </ul>
+        <div class="tab-content">
+          <div id="tab-1" class="tab-pane active"> 
+            <span class="glyphicon glyphicon-leaf glyphicon--home--feature two columns text-center"></span>
+            <span class="col-md-10">
+              <h3>Feature 1</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </span>
+          </div> 
+          <div id="tab-2" class="tab-pane">
+            <span class="glyphicon glyphicon-fire glyphicon--home--feature two columns text-center"></span>
+            <span class="col-md-10">
+              <h3>Feature 2</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </span>
+          </div>
+          <div id="tab-3" class="tab-pane">
+            <span class="glyphicon glyphicon-tint glyphicon--home--feature two columns text-center"></span>
+            <span class="col-md-10">
+              <h3>Feature 3</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="tab_container">
+        <ul>
+          <li class="tab active"><a href="#" data-tab="#tab-1">Tab 1</a></li>
+          <li class="tab"><a href="#" data-tab="#tab-2">Tab 2</a></li>
+          <li class="tab"><a href="#" data-tab="#tab-3">Tab 3</a></li>
+        </ul>
+        <div class="tab-content">
+          <div id="tab-1" class="tab-pane active"> 
+            <span class="glyphicon glyphicon-leaf glyphicon--home--feature two columns text-center"></span>
+            <span class="col-md-10">
+              <h3>Feature 1</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </span>
+          </div> 
+          <div id="tab-2" class="tab-pane">
+            <span class="glyphicon glyphicon-fire glyphicon--home--feature two columns text-center"></span>
+            <span class="col-md-10">
+              <h3>Feature 2</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </span>
+          </div>
+          <div id="tab-3" class="tab-pane">
+            <span class="glyphicon glyphicon-tint glyphicon--home--feature two columns text-center"></span>
+            <span class="col-md-10">
+              <h3>Feature 3</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </span>
+          </div>
+        </div>
+      </div>
+      <script src="js/tabs.js"></script>
+    </article>
+  </body>
 </html>
