--- a/index.html
+++ b/index.html
@@ -5,57 +5,13 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Web Component Library</title>
-    <link rel="stylesheet" href="css/tabs.css">
     <link rel="author" href="humans.txt">
   </head>
   <body>
     <h1>Web Component Library</h1>
-
-    <article>
-      <h2>Tabs</h2>
-      <h3>Component Structure</h3>
-      <pre>
-        <code>
-          Component structure:
-          .tab__container
-            .tab__list
-              .tab__link
-              .tab__link
-              .tab__link
-            .tab__content
-            .tab__content
-            .tab__content
-        </code>
-      </pre>
-      <h3>Demo</h3>
-      <div class="tab_container">
-        <ul>
-          <li class="tab active"><a href="#" data-tab="#tab-1">Tab 1</a></li>
-          <li class="tab"><a href="#" data-tab="#tab-2">Tab 2</a></li>
-          <li class="tab"><a href="#" data-tab="#tab-3">Tab 3</a></li>
-        </ul>
-        <div class="tab-content">
-          <div id="tab-1" class="tab-pane active"> 
-            <span>
-              <h3>Feature 1</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-            </span>
-          </div> 
-          <div id="tab-2" class="tab-pane">
-            <span>
-              <h3>Feature 2</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-            </span>
-          </div>
-          <div id="tab-3" class="tab-pane">
-            <span>
-              <h3>Feature 3</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-            </span>
-          </div>
-        </div>
-      </div>
-      <script src="js/tabs.js"></script>
-    </article>
+    <ul>
+      <li><input type="checkbox" /> tabs</li>
+      <li><input type="checkbox"> top nav</li>
+    </ul>
   </body>
 </html>
