--- a/top-nav/index.html
+++ b/top-nav/index.html
@@ -10,11 +10,12 @@
     </head>
     <body>
       <nav>
+        <div class="logo">Logo</div>
         <ul class="top-nav">
           <li class="nav-item"><a href="#home" class="active">Home</a></li>
           <li class="nav-item"><a href="#news">News</a></li>
           <li class="nav-item"><a href="#contact">Contact</a></li>
-          <li class="icon hamburger">&#9776;</li>
+          <li class="icon">&#9776;</li>
         </ul>
       </nav>
       <script src="top-nav.js"></script>
