finish top nav module

--- a/top-nav/index.html
+++ b/top-nav/index.html
@@ -12,10 +12,10 @@
       <nav>
         <div class="logo">Logo</div>
         <ul class="top-nav">
+          <div class="nav-item icon">&#9776;</div>
           <li class="nav-item"><a href="#home" class="active">Home</a></li>
           <li class="nav-item"><a href="#news">News</a></li>
           <li class="nav-item"><a href="#contact">Contact</a></li>
-          <li class="icon">&#9776;</li>
         </ul>
       </nav>
       <script src="top-nav.js"></script>
