update top-nag component

--- a/top-nav/index.html
+++ b/top-nav/index.html
@@ -11,11 +11,11 @@
     <body>
       <nav>
         <div class="logo">Logo</div>
-        <ul class="top-nav">
-          <div class="nav-item icon">&#9776;</div>
-          <li class="nav-item"><a href="#home" class="active">Home</a></li>
-          <li class="nav-item"><a href="#news">News</a></li>
-          <li class="nav-item"><a href="#contact">Contact</a></li>
+        <ul class="menu">
+          <div class="menu__item toggle">&#9776;</div>
+          <li class="menu__item"><a href="#home" class="active">Home</a></li>
+          <li class="menu__item"><a href="#news">News</a></li>
+          <li class="menu__item"><a href="#contact">Contact</a></li>
         </ul>
       </nav>
       <script src="top-nav.js"></script>
