add stitcher to component

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="preview">
         <header class="header">
             <h1>Stitcher</h1>
-            <button>Download HTML</button>
+            <button class="downloadBtn">Download HTML</button>
         </header>
         <div class="droppable">
             Drag Component Here to Generate HTML
