add fonts and style the page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <section class="preview">
     <header class="header">
       <h1>Stitcher</h1>
-      <button class="downloadBtn">Download HTML</button>
+      <button class="downloadBtn btn--primary">Download HTML</button>
     </header>
       <p>Drag Component Here to Generate HTML</p>
     <div class="droppable">
@@ -21,27 +21,27 @@
   </section>
   <section class="filterableSnippets">
     <div class="filter">
-      <button data-filter="snippet">show all</button>
-      <button data-filter="transition">transition</button>
-      <button data-filter="meow">meow</button>
+      <button class="btn--secondary btn--isSelected" data-filter="snippet">All</button>
+      <button class="btn--secondary" data-filter="features">Features</button>
+      <button class="btn--secondary" data-filter="cta">Call To Action</button>
     </div>
     <div class="snippets">
-      <div class="snippet transition">
+      <div class="snippet features">
         i am a 1
       </div>
-      <div class="snippet meow">
+      <div class="snippet cta">
         i am a 2
       </div>
-      <div class="snippet transition">
+      <div class="snippet features">
         i am a heade3r
       </div>
-      <div class="snippet transition">
+      <div class="snippet features">
         i am a 4
       </div>
-      <div class="snippet meow">
+      <div class="snippet cta">
         i am a 5
       </div>
-      <div class="snippet transition" data-category="transition">
+      <div class="snippet features">
         i am a 6
       </div>
     </div>
