finalize the basic styling

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1>Stitcher</h1>
       <button class="downloadBtn btn--primary">Download HTML</button>
     </header>
-      <p>Drag Component Here to Generate HTML</p>
+<!--     <div class="instruction">Drag & Drop to Generate HTML</div> -->
     <div class="droppable">
     </div>
   </section>
