fix masonry issues and shrink font

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     </section>
     <section class="filterableSnippets">
       <div class="filter">
-        <button class="btn--secondary btn--isSelected" data-filter="snippet">All</button>
-        <button class="btn--secondary" data-filter="features">Features</button>
-        <button class="btn--secondary" data-filter="content">Content</button>
+        <button class="animation--hover btn--secondary btn--isSelected" data-filter="snippet">All</button>
+        <button class="animation--hover btn--secondary" data-filter="features">Features</button>
+        <button class="animation--hover btn--secondary" data-filter="content">Content</button>
       </div>
       <div class="snippets">
         <section class="snippet content st-content-1">
