add button for snippet

--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
     </section>
     <section class="filterableSnippets">
       <div class="filter">
-        <button class="animation--hover btn--secondary btn--isSelected" data-filter="snippet">All</button>
-        <button class="animation--hover btn--secondary" data-filter="features">Features</button>
-        <button class="animation--hover btn--secondary" data-filter="content">Content</button>
+        <button class="btn--secondary btn--isSelected" data-filter="snippet">All</button>
+        <button class="btn--secondary" data-filter="features">Features</button>
+        <button class="btn--secondary" data-filter="content">Content</button>
       </div>
       <div class="snippets">
         <section class="snippet content st-content-1">
-          <h1>Title Goes Here</h1>
+          <h1>Title</h1>
         </section>
         <section class="snippet content st-content-2">
-          <h1>Title Goes Here</h1>
+          <h1>Title</h1>
           <h2>Subtitle Goes Here</h2>
-          <a href="">Learn More</a>
+          <button class="st-button">Learn More</button>
         </section>
         <section class="snippet content st-content-3">
           <h1>Title Goes Here</h1>
