--- a/index.html
+++ b/index.html
@@ -25,36 +25,37 @@
         <button class="btn--secondary" data-filter="content">Content</button>
       </div>
       <div class="snippets">
-        <section class="snippet content st-content-1">
+        <section class="snippet content st-content--center">
           <h1>Title</h1>
         </section>
-        <section class="snippet content st-content-2">
+        <section class="snippet content st-content--center">
           <h1>Title</h1>
-          <h2>Subtitle Goes Here</h2>
+          <h2>Subtitle</h2>
           <button class="st-button">Learn More</button>
         </section>
-        <section class="snippet content st-content-3">
-          <h1>Title Goes Here</h1>
-          <h2>Subtitle Goes Here</h2>
+        <section class="snippet content st-content--center">
+          <h1>Title</h1>
+          <h2>Subtitle</h2>
+          <p>Paragraph of Text. Jelly beans caramels donut apple pie halvah. Tootsie roll bear claw cookie sugar plum chupa chups. Caramels bonbon tart.</p>
           <a href="">Learn More</a>
         </section>
-        <section class="snippet content st-content-4">
-          <h1>Title Goes Here</h1>
-          <h2>Subtitle Goes Here</h2>
-          <a href="">Learn More</a>
+        <section class="snippet content st-content--center">
+          <h1>Title</h1>
+          <p>Paragraph of Text. Jelly beans caramels donut apple pie halvah. Tootsie roll bear claw cookie sugar plum chupa chups. Caramels bonbon tart.</p>
+          <button class="st-button">Learn More</button>
           <figure class="">
             <img alt="image" class="" src="https://source.unsplash.com/user/erondu" />
           </figure>
         </section>
-        <section class="snippet content st-content-5">
-          <h1>Title Goes Here</h1>
-          <h2>Subtitle Goes Here</h2>
-          <a href="">Learn More</a>
+        <section class="snippet content st-content--left">
+          <h1>Title</h1>
+          <h2>Subtitle</h2>
+          <a href="#" class="st-link">Learn More</a>
         </section>
-        <section class="snippet content st-content-6">
-          <h1>Title Goes Here</h1>
-          <h2>Subtitle Goes Here</h2>
-          <a href="">Learn More</a>
+        <section class="snippet content st-content--left">
+          <h1>Title</h1>
+          <h2>Subtitle</h2>
+          <a href="#" class="st-link">Learn More</a>
           <figure class="">
             <img alt="image" class="" src="https://source.unsplash.com/user/erondu/1600x900" />
           </figure>
