--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="stitches.css">
     <title>Web Component Library</title>
   </head>
-  <body>
+  <body class="st">
     <section class="preview">
       <header class="header">
         <h3>Stitcher</h3>
@@ -21,25 +21,35 @@
     <section class="filterableSnippets">
       <div class="filter">
         <button class="btn--secondary btn--isSelected" data-filter="snippet">All</button>
-        <button class="btn--secondary" data-filter="features">Features</button>
-        <button class="btn--secondary" data-filter="content">Content</button>
+        <button class="btn--secondary" data-filter="nav">Nav</button>
+        <button class="btn--secondary" data-filter="hero">Hero</button>
+        <button class="btn--secondary" data-filter="accordion">Accordion</button>
       </div>
       <div class="snippets">
-        <section class="snippet content st-content--center">
+        <img src="./blocks/nav-1.png" alt="" class="snippet nav">
+        <img src="./blocks/nav-2.png" alt="" class="snippet nav">
+        <img src="./blocks/nav-3.png" alt="" class="snippet nav">
+        <img src="./blocks/hero-1.png" alt="" class="snippet hero">
+        <img src="./blocks/hero-2.png" alt="" class="snippet hero">
+        <img src="./blocks/hero-3.png" alt="" class="snippet hero">
+        <img src="./blocks/accordion-1.png" alt="" class="snippet accordion">
+        <img src="./blocks/accordion-2.png" alt="" class="snippet accordion">
+        <img src="./blocks/accordion-3.png" alt="" class="snippet accordion">
+<!--         <section class="snippet st-content st-content--center">
           <h1>Title</h1>
         </section>
-        <section class="snippet content st-content--center">
+        <section class="snippet st-content st-content--center">
           <h1>Title</h1>
           <h2>Subtitle</h2>
           <button class="st-button">Learn More</button>
         </section>
-        <section class="snippet content st-content--center">
+        <section class="snippet st-content st-content--center">
           <h1>Title</h1>
           <h2>Subtitle</h2>
           <p>Paragraph of Text. Jelly beans caramels donut apple pie halvah. Tootsie roll bear claw cookie sugar plum chupa chups. Caramels bonbon tart.</p>
           <a href="">Learn More</a>
         </section>
-        <section class="snippet content st-content--center">
+        <section class="snippet st-content st-content--center">
           <h1>Title</h1>
           <p>Paragraph of Text. Jelly beans caramels donut apple pie halvah. Tootsie roll bear claw cookie sugar plum chupa chups. Caramels bonbon tart.</p>
           <button class="st-button">Learn More</button>
@@ -47,19 +57,19 @@
             <img alt="image" class="" src="https://source.unsplash.com/user/erondu" />
           </figure>
         </section>
-        <section class="snippet content st-content--left">
+        <section class="snippet st-content st-content--left">
           <h1>Title</h1>
           <h2>Subtitle</h2>
           <a href="#" class="st-link">Learn More</a>
         </section>
-        <section class="snippet content st-content--left">
+        <section class="snippet st-content st-content--left">
           <h1>Title</h1>
           <h2>Subtitle</h2>
           <a href="#" class="st-link">Learn More</a>
           <figure class="">
             <img alt="image" class="" src="https://source.unsplash.com/user/erondu/1600x900" />
           </figure>
-        </section>
+        </section> -->
       </div>
     </section>
     <script src="bundle.js"></script>
