--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
         <button class="btn--secondary" data-filter="accordion">Accordion</button>
       </div>
       <div class="snippets">
-        <img src="./blocks/nav-1.png" alt="" class="snippet nav">
-        <img src="./blocks/nav-2.png" alt="" class="snippet nav">
-        <img src="./blocks/nav-3.png" alt="" class="snippet nav">
-        <img src="./blocks/hero-1.png" alt="" class="snippet hero">
-        <img src="./blocks/hero-2.png" alt="" class="snippet hero">
-        <img src="./blocks/hero-3.png" alt="" class="snippet hero">
-        <img src="./blocks/accordion-1.png" alt="" class="snippet accordion">
-        <img src="./blocks/accordion-2.png" alt="" class="snippet accordion">
-        <img src="./blocks/accordion-3.png" alt="" class="snippet accordion">
+        <img src="./blocks/nav-1.png" alt="" id="nav-1" class="snippet nav">
+        <img src="./blocks/nav-2.png" alt="" id="nav-2" class="snippet nav">
+        <img src="./blocks/nav-3.png" alt="" id="nav-3" class="snippet nav">
+        <img src="./blocks/hero-1.png" alt="" id="hero-1" class="snippet hero">
+        <img src="./blocks/hero-2.png" alt="" id="hero-2" class="snippet hero">
+        <img src="./blocks/hero-3.png" alt="" id="hero-3" class="snippet hero">
+        <img src="./blocks/accordion-1.png" alt="" id="accordion-1" class="snippet accordion">
+        <img src="./blocks/accordion-2.png" alt="" id="accordion-2" class="snippet accordion">
+        <img src="./blocks/accordion-3.png" alt="" id="accordion-3" class="snippet accordion">
       </div>
     </section>
     <script src="bundle.js"></script>
