--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.min.css" />
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="stitches.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="stitches.css">
     <title>Web Component Library</title>
   </head>
   <body class="st">
@@ -14,9 +14,8 @@
         <h3>Stitcher</h3>
         <button class="downloadBtn btn--primary">Download HTML</button>
       </header>
-      <!--     <div class="instruction">Drag & Drop to Generate HTML</div> -->
-      <div class="droppable">
-      </div>
+      <!-- <div class="instruction">Drag & Drop to Generate HTML</div> -->
+      <div class="droppable"></div>
     </section>
     <section class="filterableSnippets">
       <div class="filter">
