download from the client side

--- a/stitches.html
+++ b/stitches.html
@@ -1,5 +1,14 @@
-<nav class="nav-1">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href=https://rawgit.com/amiechen/web-component-library/master/stitches.css>
+    <title>Stitches</title>
+  </head>
+  <body class="st"><nav class="nav-1">
   <h1>Nav 1</h1>
 </nav><div class="hero-1">
   <h1>Hero 1</h1>
-</div>
+</div></body>
+</html>
