--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.min.css" />
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="stitches.css">
     <title>Web Component Library</title>
   </head>
   <body class="st">
@@ -20,12 +19,19 @@
     <section class="filterableSnippets">
       <div class="filter">
         <button class="btn--secondary btn--isSelected" data-filter="snippet">All</button>
-        <button class="btn--secondary" data-filter="nav">Nav</button>
-        <button class="btn--secondary" data-filter="hero">Hero</button>
-        <button class="btn--secondary" data-filter="accordion">Accordion</button>
+        <button class="btn--secondary" data-filter="st-header">Header</button>
+        <button class="btn--secondary" data-filter="st-hero">Hero</button>
+        <button class="btn--secondary" data-filter="st-accordion">Accordion</button>
       </div>
       <div class="snippets">
-        <img src="./blocks/nav-1.png" alt="" id="nav-1" class="snippet nav">
+        <img src="./blocks/header-1.png" alt="" id="header-1" class="snippet st-header">
+        <img src="./blocks/header-2.png" alt="" id="header-2" class="snippet st-header">
+        <img src="./blocks/header-3.png" alt="" id="header-3" class="snippet st-header">
+        <img src="./blocks/header-4.png" alt="" id="header-4" class="snippet st-header">
+        <img src="./blocks/header-5.png" alt="" id="header-5" class="snippet st-header">
+        <img src="./blocks/header-6.png" alt="" id="header-6" class="snippet st-header">
+        <img src="./blocks/header-7.png" alt="" id="header-7" class="snippet st-header">
+        <img src="./blocks/header-8.png" alt="" id="header-8" class="snippet st-header">
         <img src="./blocks/nav-2.png" alt="" id="nav-2" class="snippet nav">
         <img src="./blocks/nav-3.png" alt="" id="nav-3" class="snippet nav">
         <img src="./blocks/hero-1.png" alt="" id="hero-1" class="snippet hero">
