--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <button class="btn--secondary btn--isSelected" data-filter="snippet">All</button>
         <button class="btn--secondary" data-filter="st-header">Header</button>
         <button class="btn--secondary" data-filter="st-hero">Hero</button>
-        <button class="btn--secondary" data-filter="st-accordion">Accordion</button>
+        <button class="btn--secondary" data-filter="st-footer">Footer</button>
       </div>
       <div class="snippets">
         <img src="./blocks/header-1.png" alt="" id="header-1" class="snippet st-header">
@@ -32,14 +32,13 @@
         <img src="./blocks/header-6.png" alt="" id="header-6" class="snippet st-header">
         <img src="./blocks/header-7.png" alt="" id="header-7" class="snippet st-header">
         <img src="./blocks/header-8.png" alt="" id="header-8" class="snippet st-header">
-        <img src="./blocks/nav-2.png" alt="" id="nav-2" class="snippet nav">
-        <img src="./blocks/nav-3.png" alt="" id="nav-3" class="snippet nav">
-        <img src="./blocks/hero-1.png" alt="" id="hero-1" class="snippet hero">
-        <img src="./blocks/hero-2.png" alt="" id="hero-2" class="snippet hero">
-        <img src="./blocks/hero-3.png" alt="" id="hero-3" class="snippet hero">
-        <img src="./blocks/accordion-1.png" alt="" id="accordion-1" class="snippet accordion">
-        <img src="./blocks/accordion-2.png" alt="" id="accordion-2" class="snippet accordion">
-        <img src="./blocks/accordion-3.png" alt="" id="accordion-3" class="snippet accordion">
+        <img src="./blocks/hero-1.png" alt="" id="hero-1" class="snippet st-hero">
+        <img src="./blocks/hero-2.png" alt="" id="hero-2" class="snippet st-hero">
+        <img src="./blocks/hero-3.png" alt="" id="hero-3" class="snippet st-hero">
+        <img src="./blocks/hero-4.png" alt="" id="hero-4" class="snippet st-hero">
+        <img src="./blocks/footer-1.png" alt="" id="footer-1" class="snippet st-footer">
+        <img src="./blocks/footer-2.png" alt="" id="footer-2" class="snippet st-footer">
+        <img src="./blocks/footer-3.png" alt="" id="footer-3" class="snippet st-footer">
       </div>
     </section>
     <script src="bundle.js"></script>
