--- a/index.html
+++ b/index.html
@@ -19,18 +19,17 @@
         <button class="btn--secondary" data-filter="st-list">List</button>
         <!-- Marketing -->
         <button class="btn--secondary" data-filter="st-hero">Hero</button>
-        <button class="btn--secondary" data-filter="st-features">Features</button>
+        <button class="btn--secondary" data-filter="st-feature">Features</button>
         <button class="btn--secondary" data-filter="st-pricing">Pricing</button>
-        <button class="btn--secondary" data-filter="st-articles">Articles</button>
-        <button class="btn--secondary" data-filter="st-magazine">Magazine</button>
-        <button class="btn--secondary" data-filter="st-quotes">Quotes</button>
+        <button class="btn--secondary" data-filter="st-article">Articles</button>
+        <button class="btn--secondary" data-filter="st-cta">Call to Action</button>
         <!-- Application -->
         <button class="btn--secondary" data-filter="st-progress">Progress Bar</button>
-        <button class="btn--secondary" data-filter="st-feed">Feed</button>
-        <button class="btn--secondary" data-filter="st-comments">Comments</button>
+        <button class="btn--secondary" data-filter="st-feed">Feed/Comments</button>
         <button class="btn--secondary" data-filter="st-notification">Notification</button>
         <button class="btn--secondary" data-filter="st-stats">Stats</button>
-        <button class="btn--secondary" data-filter="st-profile">Profile</button>
+        <button class="btn--secondary" data-filter="st-cards">Cards</button>
+        <button class="btn--secondary" data-filter="st-tab">Tab</button>
       </div>
       <div class="snippets">
         <img src="./blocks/nav-1.png" alt="" id="nav-1" class="snippet st-nav">
@@ -45,9 +44,33 @@
         <img src="./blocks/hero-2.png" alt="" id="hero-2" class="snippet st-hero">
         <img src="./blocks/hero-3.png" alt="" id="hero-3" class="snippet st-hero">
         <img src="./blocks/hero-4.png" alt="" id="hero-4" class="snippet st-hero">
+        <img src="./blocks/hero-5.png" alt="" id="hero-5" class="snippet st-hero">
+        <img src="./blocks/hero-6.png" alt="" id="hero-6" class="snippet st-hero">
         <img src="./blocks/footer-1.png" alt="" id="footer-1" class="snippet st-footer">
         <img src="./blocks/footer-2.png" alt="" id="footer-2" class="snippet st-footer">
         <img src="./blocks/footer-3.png" alt="" id="footer-3" class="snippet st-footer">
+        <img src="./blocks/feature-1.png" alt="" id="feature-1" class="snippet st-feature">
+        <img src="./blocks/feature-2.png" alt="" id="feature-2" class="snippet st-feature">
+        <img src="./blocks/feature-3.png" alt="" id="feature-3" class="snippet st-feature">
+        <img src="./blocks/feature-4.png" alt="" id="feature-4" class="snippet st-feature">
+        <img src="./blocks/feature-5.png" alt="" id="feature-5" class="snippet st-feature">
+        <img src="./blocks/feature-6.png" alt="" id="feature-6" class="snippet st-feature">
+        <img src="./blocks/pricing-1.png" alt="" id="pricing-1" class="snippet st-pricing">
+        <img src="./blocks/article-1.png" alt="" id="article-1" class="snippet st-article">
+        <img src="./blocks/article-2.png" alt="" id="article-2" class="snippet st-article">
+        <img src="./blocks/cta-1.png" alt="" id="cta-1" class="snippet st-cta">
+        <img src="./blocks/cta-2.png" alt="" id="cta-2" class="snippet st-cta">
+        <img src="./blocks/form-1.png" alt="" id="form-1" class="snippet st-form">
+        <img src="./blocks/progress-1.png" alt="" id="progress-1" class="snippet st-progress">
+        <img src="./blocks/list-1.png" alt="" id="list-1" class="snippet st-list">
+        <img src="./blocks/feed-1.png" alt="" id="feed-1" class="snippet st-feed">
+        <img src="./blocks/notification-1.png" alt="" id="notification-1" class="snippet st-notification">
+        <img src="./blocks/notification-2.png" alt="" id="notification-2" class="snippet st-notification">
+        <img src="./blocks/stats-1.png" alt="" id="stats-1" class="snippet st-stats">
+        <img src="./blocks/stats-2.png" alt="" id="stats-2" class="snippet st-stats">
+        <img src="./blocks/cards-1.png" alt="" id="cards-1" class="snippet st-cards">
+        <img src="./blocks/cards-2.png" alt="" id="cards-2" class="snippet st-cards">
+        <img src="./blocks/tab-1.png" alt="" id="tab-1" class="snippet st-tab">
       </div>
     </section>
     <section class="preview">
