--- a/stitches.html
+++ b/stitches.html
@@ -6,9 +6,13 @@
     <link rel="stylesheet" type="text/css" href=./public/stitches.css>
     <title>Stitches</title>
   </head>
-  <body class="st"><header class="font-sans bg-white text-center flex justify-between my-4 mx-auto max-w-xl overflow-hidden">
+  <body class="st"><nav class="font-sans bg-white text-center my-4 mx-auto max-w-sm overflow-hidden">
+  <img src="https://randomuser.me/api/portraits/women/44.jpg" class="h-16 sm:h-24 my-4 rounded-full" alt="avatar">
+  <p class="text-xl">Hyperyolo</p>
+  <p class="text-sm text-grey-dark leading-loose">twitter/@hyperyolo</p>
+</nav><nav class="font-sans bg-white text-center flex justify-between my-4 mx-auto max-w-xl overflow-hidden">
   <a href="/" class="block text-left">
-    <img src="https://www.dropbox.com/s/9j8w256edoluop9/hyperyolo.jpeg?dl=0" class="h-12 sm:h-12 rounded-full" alt="avatar">
+    <img src="https://randomuser.me/api/portraits/women/44.jpg" class="h-12 sm:h-12 rounded-full" alt="avatar">
   </a>
   <ul class="text-sm text-grey-dark list-reset flex items-center">
     <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Products</a></li>
@@ -18,9 +22,5 @@
     Button
     </button>
   </ul>
-</header><header class="font-sans bg-white text-center my-4 mx-auto max-w-sm overflow-hidden">
-  <img src="https://www.dropbox.com/s/9j8w256edoluop9/hyperyolo.jpeg?dl=0" class="h-16 sm:h-24 my-4 rounded-full" alt="avatar">
-  <p class="text-xl">Hyperyolo</p>
-  <p class="text-sm text-grey-dark leading-loose">twitter/@hyperyolo</p>
-</header></body>
+</nav></body>
 </html>
