--- a/stitches.html
+++ b/stitches.html
@@ -7,27 +7,19 @@
     <title>Stitches</title>
   </head>
   <body>
-    <form class="font-sans text-sm rounded w-full max-w-xs mx-auto my-8 px-8 pt-6 pb-8">
-      <div class="relative border rounded mb-4 shadow appearance-none label-floating">
-        <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="username" type="text" placeholder="Username">
-        <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="username">
-          Username
-        </label>
-      </div>
-      <div class="relative border rounded mb-4 shadow appearance-none label-floating">
-        <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="password" type="password" placeholder="Password">
-        <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="password">
-          Password
-        </label>
-      </div>
-      <div class="flex items-center justify-between">
-        <button class="bg-grey-darkest hover:bg-black text-white py-2 px-4 rounded" type="button">
-        Sign In
-        </button>
-        <a class="inline-block align-baseline text-grey hover:text-grey-darker" href="#">
-          Forgot Password?
-        </a>
-      </div>
-    </form>
+<footer class="font-sans bg-black text-white py-8 px-4">
+  <div class="mx-auto max-w-xl overflow-hidden flex justify-between items-center">
+    <ul class="text-sm text-grey-dark list-reset flex items-center">
+      <li> <a href="/" class="block mr-4 w-32">
+      <img src="./logo-white.png" class="" alt="logo">
+    </a></li>
+      <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Product</a></li>
+      <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Company</a></li>
+      <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">FAQs</a></li>
+      <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">About Us</a></li>
+    </ul>
+    <p class="inline-block py-2 px-3 text-grey-darker text-xs"> ©2018 Hyperyolo. All rights reserved.</p>
+  </div>
+</footer>
   </body>
 </html>
