--- a/stitches.html
+++ b/stitches.html
@@ -4,53 +4,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href=./public/stitches.css>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <title>Stitches</title>
   </head>
   <body>
-<footer class="font-sans bg-black text-white py-8 px-4">
-  <div class="mx-auto max-w-xl overflow-hidden flex justify-between">
-    <a href="/" class="block mr-4 w-32">
-      <img src="./logo-white.png" class="" alt="logo">
-    </a>
-    <div class="w-1/2 flex text-sm">
-      <ul class="text-grey-dark list-reset font-thin flex flex-col text-left">
-        <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium text-xs tracking-wide">Product</li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Popular</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Trending</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Catalog</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Features</a></li>
-      </ul>
-      <ul class="text-grey-dark list-reset font-thin flex flex-col text-left">
-        <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium text-xs tracking-wide">Company</li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Press Release</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Mission</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Strategy</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Works</a></li>
-      </ul>
-      <ul class="text-grey-dark list-reset font-thin flex flex-col text-left">
-        <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium text-xs tracking-wide">Info</li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Support</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Developers</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Customer Services</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Started Guide</a></li>
-      </ul>
-      <div class="text-grey-dark flex flex-col text-left">
-        <div class="inline-block py-2 px-3 text-white uppercase no-underline font-medium text-xs tracking-wide">Follow Us</div>
-<div class="flex justify-start items-center text-grey">
-            <a class="block flex items-center hover:text-grey-darker mr-6" href="https://github.com/tailwindcss/tailwindcss">
-              <svg class="fill-current w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><title>GitHub</title><path d="M10 0a10 10 0 0 0-3.16 19.49c.5.1.68-.22.68-.48l-.01-1.7c-2.78.6-3.37-1.34-3.37-1.34-.46-1.16-1.11-1.47-1.11-1.47-.9-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.9 1.52 2.34 1.08 2.91.83.1-.65.35-1.09.63-1.34-2.22-.25-4.55-1.11-4.55-4.94 0-1.1.39-1.99 1.03-2.69a3.6 3.6 0 0 1 .1-2.64s.84-.27 2.75 1.02a9.58 9.58 0 0 1 5 0c1.91-1.3 2.75-1.02 2.75-1.02.55 1.37.2 2.4.1 2.64.64.7 1.03 1.6 1.03 2.69 0 3.84-2.34 4.68-4.57 4.93.36.31.68.92.68 1.85l-.01 2.75c0 .26.18.58.69.48A10 10 0 0 0 10 0"></path></svg>
-            </a>
-            <a class="block flex items-center hover:text-grey-darker mr-6" href="https://twitter.com/tailwindcss">
-              <svg class="fill-current w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><title>Twitter</title><path d="M6.29 18.25c7.55 0 11.67-6.25 11.67-11.67v-.53c.8-.59 1.49-1.3 2.04-2.13-.75.33-1.54.55-2.36.65a4.12 4.12 0 0 0 1.8-2.27c-.8.48-1.68.81-2.6 1a4.1 4.1 0 0 0-7 3.74 11.65 11.65 0 0 1-8.45-4.3 4.1 4.1 0 0 0 1.27 5.49C2.01 8.2 1.37 8.03.8 7.7v.05a4.1 4.1 0 0 0 3.3 4.03 4.1 4.1 0 0 1-1.86.07 4.1 4.1 0 0 0 3.83 2.85A8.23 8.23 0 0 1 0 16.4a11.62 11.62 0 0 0 6.29 1.84"></path></svg>
-            </a>
-            <a class="block flex items-center hover:text-grey-darker" href="https://join.slack.com/t/tailwindcss/shared_invite/enQtMjc2NTA1NTg0NTEyLTY4ZTg1YWFjM2NjMTRkMmNkMTA4MGNiZTFmNDYyYTJhNjNkY2QxODQwODE4MWRiZDFlNzdmOGI0MmQ1M2EzZmQ">
-              <svg class="fill-current w-5 h-5" viewBox="0 0 126 126" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><title>Slack</title><g><path d="M68.186 51.784l-16.688 5.59 5.399 16.12 16.688-5.59-5.399-16.12z"></path><path fill-rule="evenodd" d="M45.343 5.243c43-12.9 61.6-2.9 74.5 40.1 12.9 43 2.9 61.6-40.1 74.5-43 12.9-61.6 2.9-74.5-40.1-12.9-43-2.9-61.6 40.1-74.5zm44.7 70.7l8.1-2.7c3.4-1.1 5.2-4.8 4.1-8.2-1.1-3.4-4.8-5.2-8.2-4.1l-8.1 2.7-5.4-16.1 8.1-2.7c3.4-1.1 5.2-4.8 4.1-8.2-1.1-3.4-4.8-5.2-8.2-4.1l-8.1 2.7-2.8-8.4c-1.1-3.4-4.8-5.2-8.2-4.1-3.4 1.1-5.2 4.8-4.1 8.2l2.8 8.4-16.7 5.6-2.8-8.4c-1.1-3.4-4.8-5.2-8.2-4.1-3.4 1.1-5.2 4.8-4.1 8.2l2.8 8.4-8.1 2.7c-3.4 1.1-5.2 4.8-4.1 8.2.9 2.6 3.4 4.3 6 4.4.7.1 1.5-.1 2.2-.3l8.1-2.7 5.4 16.1-8.1 2.7c-3.4 1.1-5.2 4.8-4.1 8.2.9 2.6 3.4 4.3 6 4.4.7.1 1.5-.1 2.2-.3l8.1-2.7 2.8 8.4c.9 2.6 3.4 4.3 6 4.4.7.1 1.5-.1 2.2-.3 3.4-1.1 5.2-4.8 4.1-8.2l-2.8-8.4 16.7-5.6 2.8 8.4c.9 2.6 3.4 4.3 6 4.4.7.1 1.5-.1 2.2-.3 3.4-1.1 5.2-4.8 4.1-8.2l-2.8-8.4z"></path></g></svg>
-            </a>
+    <footer class="font-sans bg-black text-white py-8 px-4">
+      <div class="mx-auto max-w-xl overflow-hidden flex sm:flex-col lg:flex-row justify-between">
+        <a href="/" class="block mr-4 w-32">
+          <img src="./logo-white.png" class="" alt="logo">
+        </a>
+        <div class="w-1/2 flex text-sm">
+          <ul class="text-grey-dark list-reset font-thin flex flex-col text-left">
+            <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium text-xs tracking-wide">Product</li>
+            <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Popular</a></li>
+            <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Trending</a></li>
+            <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Catalog</a></li>
+            <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Features</a></li>
+          </ul>
+          <ul class="text-grey-dark list-reset font-thin flex flex-col text-left">
+            <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium text-xs tracking-wide">Company</li>
+            <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Press Release</a></li>
+            <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Mission</a></li>
+            <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Strategy</a></li>
+            <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Works</a></li>
+          </ul>
+          <ul class="text-grey-dark list-reset font-thin flex flex-col text-left">
+            <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium text-xs tracking-wide">Info</li>
+            <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Support</a></li>
+            <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Developers</a></li>
+            <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Customer Services</a></li>
+            <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Started Guide</a></li>
+          </ul>
+          <div class="text-grey-dark flex flex-col">
+            <div class="inline-block py-2 px-3 text-white uppercase font-medium text-xs tracking-wide">Follow Us</div>
+            <div class="flex pl-4 justify-start">
+              <a class="block flex items-center text-white hover:text-grey mr-6 no-underline" href="#"><i class="fab fa-github-alt"></i></a>
+              <a class="block flex items-center text-white hover:text-grey mr-6 no-underline" href="#"><i class="fab fa-slack"></i></a>
+              <a class="block flex items-center text-white hover:text-grey no-underline" href="#"><i class="fab fa-twitter"></i></a>
+            </div>
           </div>
+        </div>
       </div>
-    </div>
-  </div>
-  <p class="inline-block py-2 px-3 text-grey-darker text-xs border b-t-1"> ©2018 Hyperyolo. All rights reserved.</p>
-</footer>
+      <p class="inline-block py-2 px-3 text-grey-darker text-xs border b-t-1"> ©2018 Hyperyolo. All rights reserved.</p>
+    </footer>
   </body>
 </html>
