add responsive margin for footer1

--- a/stitches.html
+++ b/stitches.html
@@ -9,11 +9,11 @@
   </head>
   <body>
     <footer class="font-sans bg-black text-white py-8 px-4">
-      <div class="mx-auto max-w-xl overflow-hidden flex sm:flex-col lg:flex-row justify-between">
+      <div class="mx-auto max-w-xl overflow-hidden flex flex-col lg:flex-row justify-between">
         <a href="/" class="block mr-4 w-32">
           <img src="./logo-white.png" class="" alt="logo">
         </a>
-        <div class="w-1/2 flex text-sm">
+        <div class="w-1/2 flex text-sm mt-6 lg:mt-0">
           <ul class="text-grey-dark list-reset font-thin flex flex-col text-left">
             <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium text-xs tracking-wide">Product</li>
             <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Popular</a></li>
@@ -45,7 +45,7 @@
           </div>
         </div>
       </div>
-      <p class="inline-block py-2 px-3 text-grey-darker text-xs border b-t-1"> ©2018 Hyperyolo. All rights reserved.</p>
+      <div class="pt-4 mt-4 text-grey-darker text-xs border-t border-grey-darkest text-center"> ©2018 Hyperyolo. All rights reserved.</div>
     </footer>
   </body>
 </html>
