--- a/stitches.html
+++ b/stitches.html
@@ -8,6 +8,16 @@
     <title>Stitches</title>
   </head>
   <body>
-
+    <section class="container flex">
+      <div class="w-1/2 flex flex-col justify-center items-center text-left">
+        <label for="tagline" class="uppercase tracking-loose">best app ever</label>
+        <h1>Our Work Flow</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, ex ea commodo consequat.   Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium natus error sit.</p>
+        <button class="bg-transparent hover:bg-grey text-grey-dark font-semibold hover:text-white py-2 px-4 border border-grey hover:border-transparent rounded">
+  Button
+</button>
+      </div>
+      <div class="w-1/2"></div>
+    </section>
   </body>
 </html>
