--- a/stitches.html
+++ b/stitches.html
@@ -8,5 +8,22 @@
     <title>Stitches</title>
   </head>
   <body>
+    <section class="my-8 font-sans container max-w-xl m-auto flex h-screen">
+      <div class="flex flex-col items-end justify-end text-right py-4 border-b">
+        <img class="w-10 h-10 rounded-full ml-4 bg-grey-light" src="" alt="Avatar of Jonathan Reinink">
+        <h2 class="text-black mb-2">Feature 1</h2>
+        <p class="text-sm text-grey-dark leading-normal">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+        </div>
+      <div class="w-1/2 bg-cover mx-6" style="background-image: url(./demo-phone.png);"></div>
+      <div class="w-1/4 flex flex-col">
+        <div class="flex items-start justify-start py-4 border-b">
+          <img class="w-10 h-10 rounded-full mr-4 bg-grey-light" src="" alt="Avatar of Jonathan Reinink">
+          <div class="text-sm">
+            <h3 class="text-black">Feature 4</h3>
+            <p class="text-grey-dark leading-normal">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
