--- a/stitches.html
+++ b/stitches.html
@@ -8,8 +8,8 @@
     <title>Stitches</title>
   </head>
   <body>
-<section class="font-sans container max-w-xl m-auto flex justify-between h-screen">
-      <div class="w-1/4 flex flex-col items-end justify-end text-right pl-8">
+<section class="font-sans container max-w-xl m-auto flex flex-col lg:flex-row justify-center my-8">
+      <div class="order-2 lg:order-1 w-full lg:w-1/4 flex flex-col items-center lg:items-end justify-end text-center lg:text-right ml-0 lg:ml-8 mt-8">
         <img class="w-6 h-6 rounded-full bg-grey-light mb-2" src="" alt="Avatar of Jonathan Reinink">
         <h3 class="text-black mb-2 font-light">Feature 1</h3>
         <p class="text-sm text-grey-dark leading-normal mb-8">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -20,8 +20,10 @@
         <h3 class="text-black mb-2 font-light">Feature 1</h3>
         <p class="text-sm text-grey-dark leading-normal">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
         </div>
-      <div class="w-1/2 bg-cover bg-no-repeat" style="background-image: url(./demo-phone.png);"></div>
-      <div class="w-1/4 flex flex-col items-start justify-end text-left pr-8">
+      <div class="order-1 lg:order-2 w-full lg:w-1/2 max-w-xs m-auto mb-6 lg:mb-0">
+        <img src="./demo-phone.png" alt="">
+      </div>
+      <div class="order-last w-full lg:w-1/4 flex flex-col items-center lg:items-start justify-end text-center lg:text-left mt-8 mr-8">
         <img class="w-6 h-6 rounded-full bg-grey-light mb-2" src="" alt="Avatar of Jonathan Reinink">
         <h3 class="text-black mb-2 font-light">Feature 1</h3>
         <p class="text-sm text-grey-dark leading-normal mb-8">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
