--- a/stitches.html
+++ b/stitches.html
@@ -8,16 +8,46 @@
     <title>Stitches</title>
   </head>
   <body>
-<section class="font-sans text-center py-8 px-4 lg:px-0 bg-grey-lightest">
-      <div class="container flex flex-col sm:flex-row bg-white max-w-xl m-auto">
-        <div class="w-full sm:w-3/4 px-6 pt-6 text-left flex flex-col justify-center">
-          <h2 class="capitalize font-medium">Ready to get started?</h2>
-          <p class="text-grey-dark mt-2 mb-6">But I must explain to you how all this mistaken idea of denouncing </p>
+    <section class="font-sans container m-auto max-w-xl py-8">
+      <div class="flex">
+        <div class="w-1/8 text-right pl-3 pt-3">
+          <a href="#" class="block"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/tt_avatar_egghead.jpg" alt="avatar" class="rounded-full h-12 w-12 mr-2"></a>
         </div>
-        <div class="w-full sm:w-1/4 flex justify-start sm:justify-center items-center pl-6 pb-6 sm:pl-0 sm:pb-0">
-          <button class=" bg-black hover:bg-grey-darkest text-white hover:text-white py-3 px-6 uppercase text-xs tracking-wide">Learn More</button>
+        <div class="w-7/8 p-3 pl-0">
+          <div class="flex justify-between">
+            <div>
+              <span class="font-bold"><a href="#" class="text-black">egghead.io</a></span>
+              <span class="text-grey-dark">@eggheadio</span>
+              <span class="text-grey-dark">·</span>
+              <span class="text-grey-dark">29 Nov 2017</span>
+            </div>
+            <div>
+              <a href="#" class="text-grey-dark hover:text-teal"><i class="fa fa-chevron-down"></i></a>
+            </div>
+          </div>
+          <div>
+            <div class="mb-4">
+              <p class="mb-6">Create a Responsive Card Component by Composing Tailwind's Utility Classes - <a href="#" class="text-teal">#html</a> lesson by <a href="#" class="text-teal">@simonswiss</a></p>
+              <div class="flex border border-solid border-grey rounded">
+                <div class="w-1/4">
+                  <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/tt_tweet4.jpg" alt="image">
+                </div>
+                <div class="w-3/4 p-3">
+                  <div class="font-bold mb-1">egghead Lesson: Abstract utility classes to ...</div>
+                  <p class="mb-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus voluptate tempore itaque culpa hic qui nostrum, minus harum cupiditate a voluptatibus.
+                    </p><div class="text-grey-dark">egghead.io</div>
+                  </div>
+                </div>
+              </div>
+              <div class="pb-2">
+                <span class="mr-8"><a href="#" class="text-grey-dark hover:no-underline hover:text-blue-light"><i class="fa fa-comment fa-lg mr-2"></i> 2</a></span>
+                <span class="mr-8"><a href="#" class="text-grey-dark hover:no-underline hover:text-green"><i class="fa fa-retweet fa-lg mr-2"></i> 8</a></span>
+                <span class="mr-8"><a href="#" class="text-grey-dark hover:no-underline hover:text-red"><i class="fa fa-heart fa-lg mr-2"></i> 24</a></span>
+                <span class="mr-8"><a href="#" class="text-grey-dark hover:no-underline hover:text-teal"><i class="fa fa-envelope fa-lg mr-2"></i></a></span>
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
-    </section>
-  </body>
-</html>
+      </section>
+    </body>
+  </html>
